test/libsolidity/syntaxTests/unexpected.sol
unexpected
// ----
// ParserError 2314: (11-11): Expected identifier but got end of source
